--- a/cv.html
+++ b/cv.html
@@ -1,111 +1,64 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
-    <meta charset="UTF-8">
-    <title>Curriculum Vitae</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            color: #333;
-            background-color: #fff;
-        }
-
-        h1,
-        h2 {
-            color: #0066cc;
-        }
-
-        #photo {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin: 1 auto;
-            display: block;
-        }
-
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .section h2 {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .section ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        .section ul li {
-            margin-bottom: 5px;
-        }
-
-        .section ul li strong {
-            display: inline-block;
-            width: 150px;
-            font-weight: bold;
-        }
-
-        .section p {
-            margin-bottom: 10px;
-        }
-    </style>
+	<meta charset="utf-8">
+	<meta charset="UTF-8">
+	<meta name="author" content="Agustin Leonel Gonzalez">
+	<meta name="description" content="Currículum Vitae de Agustin Leonel Gonzalez">
+	<meta name="keywords" content="CV, currículum, programación, desarrollo web">
+	<title>Currículum Vitae</title>
+	<link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <header>
-        <h1>Curriculum Vitae</h1>
-    </header>
-
-    <main>
-        <div class="section">
-            <h2>Datos personales</h2>
-            <img id="photo" src="20200218_111446.jpg" alt="Tu foto">
-            <p>Nombre completo: <strong>Agustin Gonzalez</strong></p>
-            <p>Edad: <strong>27</strong></p>
-            <p>Correo electrónico: <strong>agustingonzalez660@gmail.com</strong></p>
-            <p>Teléfono: <strong>1164079724</strong></p>
-            <p>País: <strong>Argentina</strong></p>
-        </div>
-
-        <div class="section">
-            <h2>Formación académica</h2>
-            <ul>
-                <li><strong>Técnicatura en Programación Web</strong>  Universidad Nacional del Oeste</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Experiencia laboral</h2>
-            <ul>
-                <li><strong>Nombre de la empresa</strong>, Banco Supervielle , 11 de Mayo 2022 - Actualidad</li>
-                <li>Desarrollo aplicaciones web</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Habilidades</h2>
-            <ul>
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>Angular</li>
-                <li>NetCore</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Idiomas</h2>
-            <ul>
-                <li>Idioma 1: Español nativo</li>
-                <li>Idioma 2: Inglés básico</li>
-            </ul>
-        </div>
-
-    </main>
+	<header>
+		<h1>Agustin Leonel Gonzalez</h1>
+	</header>
+	<main>
+		<section class="personal-info">
+			<div class="header-container">
+				<img id="photo" src="20200218_111446.jpg" alt="Tu foto">
+				<div class="personal-info">
+				  <h1>Agustin Leonel Gonzalez</h1>
+				  <p>Fecha de nacimiento: 21/02/1996</p>
+				  <p>Dirección: Marcos Paz</p>
+				  <p>Correo electrónico: agustinleonelgonzalez@gmail.com</p>
+				</div>
+			  </div>
+			<h2>Información Personal</h2>
+			<ul>
+				<li><strong>Fecha de nacimiento:</strong> 21/02/1996</li>
+				<li><strong>Dirección:</strong> Marcos Paz</li>
+				<li><strong>Correo electrónico:</strong> agustinleonelgonzalez@gmail.com</li>
+			</ul>
+			<h2>Educación</h2>
+			<ul>
+				<li><strong>Tecnicatura en Programación</strong> - Universidad Nacional del Oeste</li>
+			</ul>
+		</section>
+		<section  class="experiencia-laboral">
+			<h2>Experiencia Laboral</h2>
+			<ul>
+				<li><strong>Software Developer</strong> - Banco Supervielle</li>
+				<li>Desarrollo y mantenimiento de sistemas y aplicaciones web.</li>
+				<li>Uso de lenguajes de programación como Java, JavaScript, HTML y CSS.</li>
+			</ul>
+		</section>
+		<section>
+			<h2>Contacto</h2>
+			<form action="" method="POST">
+			  <label for="nombre">Nombre:</label>
+			  <input type="text" id="nombre" name="nombre">
+	  
+			  <label for="correo">Correo electrónico:</label>
+			  <input type="email" id="correo" name="_replyto">
+	  
+			  <label for="mensaje">Mensaje:</label>
+			  <textarea id="mensaje" name="mensaje"></textarea>
+	  
+			  <button type="submit">Enviar</button>
+			</form>
+		  </section>
+	</main>
 </body>
-
 </html>
