--- a/cv.html
+++ b/cv.html
@@ -1,64 +1,119 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
 	<meta charset="UTF-8">
 	<meta name="author" content="Agustin Leonel Gonzalez">
 	<meta name="description" content="Currículum Vitae de Agustin Leonel Gonzalez">
 	<meta name="keywords" content="CV, currículum, programación, desarrollo web">
 	<title>Currículum Vitae</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<header>
 		<h1>Agustin Leonel Gonzalez</h1>
 	</header>
-	<main>
-		<section class="personal-info">
-			<div class="header-container">
-				<img id="photo" src="20200218_111446.jpg" alt="Tu foto">
-				<div class="personal-info">
-				  <h1>Agustin Leonel Gonzalez</h1>
-				  <p>Fecha de nacimiento: 21/02/1996</p>
-				  <p>Dirección: Marcos Paz</p>
-				  <p>Correo electrónico: agustinleonelgonzalez@gmail.com</p>
-				</div>
-			  </div>
-			<h2>Información Personal</h2>
-			<ul>
-				<li><strong>Fecha de nacimiento:</strong> 21/02/1996</li>
-				<li><strong>Dirección:</strong> Marcos Paz</li>
-				<li><strong>Correo electrónico:</strong> agustinleonelgonzalez@gmail.com</li>
-			</ul>
-			<h2>Educación</h2>
-			<ul>
-				<li><strong>Tecnicatura en Programación</strong> - Universidad Nacional del Oeste</li>
-			</ul>
-		</section>
-		<section  class="experiencia-laboral">
-			<h2>Experiencia Laboral</h2>
-			<ul>
-				<li><strong>Software Developer</strong> - Banco Supervielle</li>
-				<li>Desarrollo y mantenimiento de sistemas y aplicaciones web.</li>
-				<li>Uso de lenguajes de programación como Java, JavaScript, HTML y CSS.</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Contacto</h2>
-			<form action="" method="POST">
-			  <label for="nombre">Nombre:</label>
-			  <input type="text" id="nombre" name="nombre">
-	  
-			  <label for="correo">Correo electrónico:</label>
-			  <input type="email" id="correo" name="_replyto">
-	  
-			  <label for="mensaje">Mensaje:</label>
-			  <textarea id="mensaje" name="mensaje"></textarea>
-	  
-			  <button type="submit">Enviar</button>
-			</form>
-		  </section>
+	<main class="container">
+		<div class="row">
+			<div class="col-md-6">
+				<section class="personal-info">
+					<div class="header-container">
+						<img id="photo" src="20200218_111446.jpg" alt="Fotografía de Agustin Leonel Gonzalez">
+						<div class="personal-info">
+							<p class="personal-info__item"><strong>Fecha de nacimiento:</strong> 21/02/1996</p>
+							<p class="personal-info__item"><strong>Dirección:</strong> Marcos Paz</p>
+							<p class="personal-info__item"><strong>Correo electrónico:</strong> agustinleonelgonzalez@gmail.com</p>
+						</div>
+					</div>
+				</section>
+			</div>
+			<div class="col-md-6">
+				<section class="experiencia-laboral">
+					<h2>Experiencia Laboral</h2>
+					<ul>
+							<li><strong>Software Developer</strong> - Banco Supervielle</li>
+							<li>Desarrollo y mantenimiento de sistemas y aplicaciones web.</li>
+							<li>Uso de lenguajes de programación como Java, JavaScript, HTML y CSS.</li>
+					</ul>
+				</section>
+				<section>
+					<h2>Contacto</h2>
+					<form id="contact-form" action="" method="POST">
+						<div class="form-group">
+							<label for="nombre">Nombre:</label>
+							<input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
+						</div>
+
+						<div class="form-group">
+							<label for="correo">Correo electrónico:</label>
+							<input type="email" class="form-control" id="correo" name="_replyto" placeholder="Correo electrónico" required>
+						</div>
+
+						<div class="form-group">
+							<label for="mensaje">Mensaje:</label>
+							<textarea class="form-control" id="mensaje" name="mensaje" placeholder="Mensaje" rows="5" required></textarea>
+						</div>
+
+						<div class="form-group">
+							<label for="sueldo">Sueldo mínimo (ARS):</label>
+							<input type="number" class="form-control" id="sueldo" name="sueldo" placeholder="Sueldo mínimo" required>
+						</div>
+
+						<button type="submit" class="btn btn-primary">Enviar</button>
+					</form>
+				</section>
+				<section id="submitted-data">
+					<h2>Datos enviados:</h2>
+					<ul id="submitted-list"></ul>
+				</section>
+			</div>
+		</div>
 	</main>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+	<script>
+		const form = document.getElementById('contact-form');
+		const nameInput = document.getElementById('nombre');
+		const emailInput = document.getElementById('correo');
+		const messageInput = document.getElementById('mensaje');
+		const salaryInput = document.getElementById('sueldo');
+		const submittedList = document.getElementById('submitted-list');
+
+		form.addEventListener('submit', function(event) {
+			event.preventDefault();
+
+			const name = nameInput.value;
+			const email = emailInput.value;
+			const message = messageInput.value;
+			const salary = salaryInput.value;
+
+			const listItem = document.createElement('li');
+			listItem.innerHTML = `
+				<p><strong>Nombre:</strong> ${name}</p>
+				<p><strong>Correo electrónico:</strong> ${email}</p>
+				<p><strong>Mensaje:</strong> ${message}</p>
+				<p><strong>Sueldo mínimo:</strong> ${salary} ARS (${convertToCurrency(salary, 'USD')} USD, ${convertToCurrency(salary, 'EUR')} EUR)</p>
+			`;
+			submittedList.appendChild(listItem);
+
+			clearForm();
+		});
+
+		function clearForm() {
+			nameInput.value = '';
+			emailInput.value = '';
+			messageInput.value = '';
+			salaryInput.value = '';
+		}
+
+		function convertToCurrency(amount, currency) {
+			const exchangeRates = {
+				'USD': 450,  // Reemplazar con los tipos de cambio reales
+				'EUR': 500  // Reemplazar con los tipos de cambio reales
+			};
+
+			const convertedAmount = amount * exchangeRates[currency];
+			return convertedAmount.toFixed(2);
+		}
+	</script>
 </body>
 </html>
